p2/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: iot
spec:
  rules:
  - host: a.iot
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: http-server-a
            port:
              number: 80
  - host: b.iot
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: http-server-b
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: http-server-c
            port:
              number: 80
